# ctx

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  Cargo.toml  MODULE.bazel  README.md  SECURITY.md  manager-exec-plan.md
core/: BUILD.bazel  Cargo.toml
core/apps/web/: vite.config.ts
core/apps/web/e2e/: visual-workbench-templates.spec.ts
core/apps/web/e2e/utils/: visualWorkbench.ts
core/apps/web/scripts/: start-e2e-server.mjs  start-e2e-server.test.mjs
core/apps/web/src/: App.tsx  styles.css
core/apps/web/src/api/: clientWorkspaces.ts  clientWorkspaces.work.test.ts
core/apps/web/src/styles/: work-report.css  workbench.css
core/crates/ctx-core/src/: ids.rs  models.rs
core/crates/ctx-core/src/models/: run_archive.rs  runs.rs
core/crates/ctx-daemon/: Cargo.toml
core/crates/ctx-daemon/src/: daemon.rs  test_support.rs
core/crates/ctx-daemon/src/daemon/: plugins.rs  route_capabilities.rs  route_handles.rs  workspace_route_handles.rs  workspaces.rs
core/crates/ctx-daemon/src/test_support/: route_handles.rs  session_lifecycle.rs
core/crates/ctx-desktop-ipc/src/: declarations.rs
core/crates/ctx-http/: BUILD.bazel
core/crates/ctx-http/src/: agent_work_cli.rs  lib_tests.rs
core/crates/ctx-http/src/api/: mod.rs  router.rs  workspaces.rs
core/crates/ctx-route-contracts/src/: lib.rs  workspaces.rs
core/crates/ctx-route-contracts/src/workspaces/: responses.rs
core/crates/ctx-store/migrations/: 0069_reserved_local_schema_slot.sql  0070_runs_archive_audit.sql  0071_reserved_local_archive_sync_cleanup.sql  0076_work_observability.sql  0077_allow_multi_work_strong_links.sql
core/crates/ctx-store/src/: lib.rs  tests.rs
core/crates/ctx-store/src/store/: migration_repairs.rs  mod.rs  runs.rs  sqlite_bootstrap.rs  work_observability.rs  work_projection.rs
core/crates/ctx-store/src/tests/: run_archive.rs
core/scripts/dev/: README.md
crates/ctx-cli/: Cargo.toml  build.rs
crates/ctx-cli/src/: analytics.rs  config.rs  docs.rs  history_source_plugins.rs  identity.rs  install_marker.rs  main.rs  mcp.rs  net.rs  output.rs  parser_prop_tests.rs  progress.rs  provider_args.rs  provider_sources.rs  search_filters.rs  search_render.rs  search_web.rs  semantic.rs  skill.rs  store_util.rs  transcript.rs  upgrade.rs
crates/ctx-cli/src/commands/: doctor.rs  import.rs  index.rs  locate.rs  mod.rs  search.rs  setup.rs  show.rs  sources.rs  sql.rs  status.rs
crates/ctx-cli/src/commands/import/: catalog.rs  explicit.rs  inventory.rs  manifest.rs  native.rs  report.rs  requests.rs
crates/ctx-cli/src/mcp/: text.rs
crates/ctx-cli/src/semantic/: daemon.rs  embedding_backend.rs  health_search.rs  indexing.rs  model_acquisition.rs  model_bundle.rs  ort_runtime.rs  paths_status.rs  preamble.rs  query_service_transport.rs  resource_policy.rs  tests.rs  vector_store_schema.rs  vector_store_search.rs  vector_store_state.rs
crates/ctx-cli/src/skill/: agents.rs  install.rs  paths.rs  selection.rs  target.rs  tests.rs
crates/ctx-cli/src/upgrade/: command.rs  install.rs  metadata.rs  mod.rs  path.rs  state.rs
crates/ctx-cli/tests/: analytics.rs  cli.rs  cli_public_help_docs.rs  history_source_plugins.rs  index.rs  mcp.rs  native_providers.rs  search_refresh.rs  search_show_locate_sql.rs  setup_sources_import.rs  skill.rs  upgrade.rs
crates/ctx-cli/tests/support/: analytics.rs  assertions.rs  fixtures.rs  history_plugins.rs  mcp.rs  mod.rs  native_fixtures.rs  runner.rs  upgrade.rs
crates/ctx-cli/web/search-ui/: README.md  index.html  package.json  pnpm-lock.yaml
crates/ctx-history-capture/: Cargo.toml
crates/ctx-history-capture/src/: error.rs  fixture.rs  lib.rs  options.rs  provider_sources.rs  spool.rs  summaries.rs  tests.rs
crates/ctx-history-capture/src/common/: identity.rs  io.rs  json.rs  time.rs
crates/ctx-history-capture/src/provider/: adapter.rs  adapter_impls.rs  api.rs  custom_history_jsonl.rs  file_touches.rs  importer.rs  mod.rs  native.rs  sqlite.rs
crates/ctx-history-capture/src/provider_sources/: discovery.rs  mod.rs  probes.rs  reasons.rs  specs.rs  types.rs
crates/ctx-history-capture/src/tests/: codex.rs  custom_history.rs  hermes_batching.rs  native_json.rs  native_providers.rs  native_real_shapes.rs  native_sqlite.rs  provider_fixture.rs  provider_upgrade.rs  spool_provider.rs  support.rs
crates/ctx-history-capture/tests/: cursor_native.rs
crates/ctx-history-core/: Cargo.toml
crates/ctx-history-core/src/: archive.rs  dtos.rs  lib.rs  paths.rs  provider.rs  redaction.rs  source.rs  sync.rs  tests.rs
crates/ctx-history-search/: Cargo.toml
crates/ctx-history-search/src/: filters.rs  lib.rs  model.rs  packet.rs  query.rs  ranking.rs  results.rs  search.rs  snippets.rs  source.rs
crates/ctx-history-search/src/tests/: exclusion.rs  fast_path.rs  filter_scans.rs  mod.rs  perf.rs  ranking.rs  rich.rs  snippets.rs  source_metadata.rs  support.rs
crates/ctx-history-store/: Cargo.toml
crates/ctx-history-store/src/: artifacts.rs  bulk_search.rs  catalog.rs  connection.rs  connection_tests.rs  error.rs  events.rs  files.rs  identity.rs  lib.rs  object_store.rs  raw_sql.rs  records.rs  runs.rs  sessions.rs  sources.rs  summaries.rs  sync.rs  vcs.rs
crates/ctx-history-store/src/archive/: conflicts.rs  import.rs  mod.rs  tests.rs
crates/ctx-history-store/src/catalog/: tests.rs
crates/ctx-history-store/src/schema/: ddl.rs  fts.rs  indexes.rs  migrations.rs  mod.rs  provider_session_identity.rs  provider_session_identity_tests.rs  tests.rs  views.rs
crates/ctx-history-store/src/search/: mod.rs  projections.rs  tests.rs
crates/work-record-capture/: Cargo.toml
crates/work-record-capture/src/: lib.rs  provider_sources.rs
crates/work-record-capture/tests/: cursor_native.rs
crates/work-record-core/: Cargo.toml
crates/work-record-core/src/: lib.rs  provider.rs
crates/work-record-report/: Cargo.toml
crates/work-record-report/src/: lib.rs
crates/work-record-search/: Cargo.toml
crates/work-record-search/src/: lib.rs
crates/work-record-store/: Cargo.toml
crates/work-record-store/src/: lib.rs
docs/: README.md  (+50 more)
(+365 files in other folders)
