CTX_GATE_DATA = glob([
    ".bazelrc",
    ".buildkite/**",
    ".ctx/**",
    "BUILD.bazel",
    "Cargo.lock",
    "Cargo.toml",
    "MODULE.bazel",
    "README.md",
    "SECURITY.md",
    "crates/**",
    "docs/**",
    "release/**",
    "scripts/**",
    "skills/**",
    "tests/**",
])

sh_test(
    name = "cargo_fmt_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_fmt_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_clippy",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_clippy"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_test_default",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_test_default"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_test_all_features",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_test_all_features"],
    data = CTX_GATE_DATA,
    tags = [
        "legacy",
        "manual",
    ],
)

sh_test(
    name = "cli_contract_tests",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cli_contract_tests"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "docs_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["docs_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "buildkite_pipeline_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["buildkite_pipeline_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "source_diff_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["source_diff_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "package_audit_fast",
    srcs = ["scripts/bazel-test.sh"],
    args = ["package_audit_fast"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "package_audit_release",
    srcs = ["scripts/bazel-test.sh"],
    args = ["package_audit_release"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "fresh_home_e2e",
    srcs = ["scripts/bazel-test.sh"],
    args = ["fresh_home_e2e"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "provider_fixture_e2e",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_fixture_e2e"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "security_static_audit",
    srcs = ["scripts/bazel-test.sh"],
    args = ["security_static_audit"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "security_no_repo_writes",
    srcs = ["scripts/bazel-test.sh"],
    args = ["security_no_repo_writes"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "privacy_redaction_oracle",
    srcs = ["scripts/bazel-test.sh"],
    args = ["privacy_redaction_oracle"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "search_determinism_tests",
    srcs = ["scripts/bazel-test.sh"],
    args = ["search_determinism_tests"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "synthetic_search_smoke",
    srcs = ["scripts/bazel-test.sh"],
    args = ["synthetic_search_smoke"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "search_perf_bench",
    srcs = ["scripts/bazel-test.sh"],
    args = ["search_perf_bench"],
    data = CTX_GATE_DATA,
    size = "large",
    tags = [
        "exclusive",
        "local",
        "manual",
        "perf",
    ],
)

sh_test(
    name = "release_dry_run_host",
    srcs = ["scripts/bazel-test.sh"],
    args = ["release_dry_run_host"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "release_platform_blocker_freebsd",
    srcs = ["scripts/bazel-test.sh"],
    args = ["release_platform_blocker_freebsd"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "provider_live_e2e_lane_definitions",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_live_e2e_lane_definitions"],
    data = CTX_GATE_DATA,
    tags = [
        "manual",
        "provider-live",
    ],
)

sh_test(
    name = "provider_live_e2e_codex",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_live_e2e_codex"],
    data = CTX_GATE_DATA,
    tags = [
        "exclusive",
        "external",
        "local",
        "manual",
        "provider-live",
    ],
)

sh_test(
    name = "provider_live_e2e_pi",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_live_e2e_pi"],
    data = CTX_GATE_DATA,
    tags = [
        "exclusive",
        "external",
        "local",
        "manual",
        "provider-live",
    ],
)

sh_test(
    name = "provider_live_e2e_selected",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_live_e2e_selected"],
    data = CTX_GATE_DATA,
    tags = [
        "exclusive",
        "external",
        "local",
        "manual",
        "provider-live",
    ],
)

sh_test(
    name = "release_candidate_metadata_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["release_candidate_metadata_contract"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "r2_staging_smoke_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["r2_staging_smoke_contract"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "completion_certificate_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["completion_certificate_contract"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "release_artifact_evidence_missing_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["release_artifact_evidence_missing_contract"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "release_artifact_evidence_freebsd_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["release_artifact_evidence_freebsd_contract"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "release_artifact_evidence",
    srcs = ["scripts/release-completion-certificate.sh"],
    args = ["--mode=release-evidence"],
    data = CTX_GATE_DATA,
    tags = [
        "external",
        "manual",
        "release",
    ],
)

sh_test(
    name = "manual_external_contract",
    srcs = ["scripts/bazel-test.sh"],
    args = ["manual_external_contract"],
    data = CTX_GATE_DATA,
    tags = [
        "external",
        "manual",
    ],
)

test_suite(
    name = "fast",
    tests = [
        ":cargo_fmt_check",
        ":cargo_check",
        ":cli_contract_tests",
        ":docs_check",
        ":buildkite_pipeline_check",
        ":source_diff_check",
        ":package_audit_fast",
    ],
)

test_suite(
    name = "presubmit",
    tests = [
        ":fast",
        ":cargo_clippy",
        ":cargo_test_default",
        ":fresh_home_e2e",
        ":provider_fixture_e2e",
    ],
)

test_suite(
    name = "production",
    tests = [
        ":presubmit",
        ":security_static_audit",
        ":security_no_repo_writes",
        ":privacy_redaction_oracle",
        ":search_determinism_tests",
        ":synthetic_search_smoke",
    ],
)

test_suite(
    name = "release_contract",
    tests = [
        ":production",
        ":package_audit_release",
        ":release_dry_run_host",
        ":release_platform_blocker_freebsd",
        ":provider_live_e2e_lane_definitions",
        ":release_candidate_metadata_contract",
        ":r2_staging_smoke_contract",
        ":completion_certificate_contract",
        ":release_artifact_evidence_missing_contract",
        ":release_artifact_evidence_freebsd_contract",
    ],
)

test_suite(
    name = "release",
    tests = [
        ":release_contract",
        ":release_artifact_evidence",
    ],
)

test_suite(
    name = "platform",
    tests = [
        ":fresh_home_e2e",
        ":release_dry_run_host",
        ":release_platform_blocker_freebsd",
    ],
)

test_suite(
    name = "perf",
    tests = [
        ":search_perf_bench",
    ],
)

test_suite(
    name = "provider_live",
    tests = [
        ":provider_live_e2e_lane_definitions",
        ":provider_live_e2e_codex",
        ":provider_live_e2e_pi",
        ":provider_live_e2e_selected",
    ],
)

test_suite(
    name = "nightly",
    tests = [
        ":release_contract",
        ":perf",
        ":provider_live",
    ],
)

test_suite(
    name = "manual",
    tests = [
        ":manual_external_contract",
        ":perf",
        ":provider_live",
    ],
)

test_suite(
    name = "legacy_all_features",
    tests = [
        ":cargo_test_all_features",
    ],
)

test_suite(
    name = "legacy",
    tests = [
        ":legacy_all_features",
    ],
)

test_suite(
    name = "production_hardening",
    tests = [
        ":production",
    ],
)

test_suite(
    name = "release_candidate",
    tests = [
        ":release_contract",
    ],
)

test_suite(
    name = "manual_external",
    tests = [
        ":manual",
    ],
)
