CTX_GATE_DATA = glob([
    ".bazelrc",
    ".buildkite/**",
    "BUILD.bazel",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "MODULE.bazel",
    "README.md",
    "SECURITY.md",
    "crates/**",
    "docs/**",
    "scripts/**",
    "skills/**",
    "tests/**",
])

sh_test(
    name = "cargo_fmt_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_fmt_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_clippy",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_clippy"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cargo_test_default",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cargo_test_default"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "cli_contract_tests",
    srcs = ["scripts/bazel-test.sh"],
    args = ["cli_contract_tests"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "docs_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["docs_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "buildkite_pipeline_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["buildkite_pipeline_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "source_diff_check",
    srcs = ["scripts/bazel-test.sh"],
    args = ["source_diff_check"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "package_audit_fast",
    srcs = ["scripts/bazel-test.sh"],
    args = ["package_audit_fast"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "fresh_home_e2e",
    srcs = ["scripts/bazel-test.sh"],
    args = ["fresh_home_e2e"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "provider_fixture_e2e",
    srcs = ["scripts/bazel-test.sh"],
    args = ["provider_fixture_e2e"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "privacy_redaction_oracle",
    srcs = ["scripts/bazel-test.sh"],
    args = ["privacy_redaction_oracle"],
    data = CTX_GATE_DATA,
)

sh_test(
    name = "search_determinism_tests",
    srcs = ["scripts/bazel-test.sh"],
    args = ["search_determinism_tests"],
    data = CTX_GATE_DATA,
)

test_suite(
    name = "fast",
    tests = [
        ":cargo_fmt_check",
        ":cargo_check",
        ":cli_contract_tests",
        ":docs_check",
        ":buildkite_pipeline_check",
        ":source_diff_check",
        ":package_audit_fast",
    ],
)

test_suite(
    name = "presubmit",
    tests = [
        ":fast",
        ":cargo_clippy",
        ":cargo_test_default",
        ":fresh_home_e2e",
        ":provider_fixture_e2e",
        ":privacy_redaction_oracle",
        ":search_determinism_tests",
    ],
)

test_suite(
    name = "ci",
    tests = [
        ":presubmit",
    ],
)

test_suite(
    name = "smoke",
    tests = [
        ":fast",
        ":fresh_home_e2e",
        ":provider_fixture_e2e",
    ],
)
