[workspace]
members = [
    "crates/ctx-cli",
    "crates/work-record-capture",
    "crates/work-record-core",
    "crates/work-record-report",
    "crates/work-record-search",
    "crates/work-record-store",
    "crates/work-record-vcs",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ctxrs/ctx"
rust-version = "1.81"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
libc = "0.2"
predicates = "3.1"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4", "v7"] }
