[workspace]
members = [
    "crates/ctx-cli",
    "crates/ctx-history-capture",
    "crates/ctx-history-core",
    "crates/ctx-history-search",
    "crates/ctx-history-store",
    "crates/ctx-protocol",
    "crates/ctx-sdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ctxrs/ctx"
homepage = "https://github.com/ctxrs/ctx"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_mangen = "0.2"
directories = "5.0"
ed25519-dalek = "2.1"
libc = "0.2"
predicates = "3.1"
proptest = "1"
regex = "1.10"
ring = "0.17"
rmpv = "1.3"
rusqlite = { version = "0.32", features = ["bundled", "hooks", "limits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tar = "0.4"
url = "2.5"
uuid = { version = "1.10", features = ["serde", "v4", "v7"] }
xz2 = "0.1"
zstd = "0.13"

[patch.crates-io]
# `ort` 2.0.0-rc.12 does not select the default load-dynamic library name on
# FreeBSD. This fork is exactly rc.12 plus that one-line target cfg fix. Drop
# the patch once a crates.io release includes the fix.
ort = { git = "https://github.com/ctxrs/ort.git", rev = "7cc21d66952354c3ecc6d1b88c2f27b700850807" }

# `sqlite-vec` 0.1.9 redeclares stdint types on Unix, which conflicts with the
# FreeBSD headers. This fork is the stable crate plus the upstream three-typedef
# removal from asg017/sqlite-vec#219. Drop it once a stable release includes it.
sqlite-vec = { git = "https://github.com/ctxrs/sqlite-vec.git", rev = "c1762b6065bccdedf1f68a904096d46f91d3a486" }
