module(
    name = "ctx_search",
    version = "0.22.0",
)

bazel_dep(name = "rules_rust", version = "0.71.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

# Native Bazel Rust uses the same toolchain as public CI. The workspace
# rust-version remains package MSRV metadata; MSRV enforcement belongs in a
# separate explicit lane rather than in this CI parity graph.
rust.toolchain(
    edition = "2021",
    versions = ["1.88.0"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
