[package]
name = "ctx"
version = "0.9.0"
description = "Local CLI for indexing and searching agent session history"
edition.workspace = true
autobins = false
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["agent", "cli", "search", "sqlite"]

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
include_dir.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
url.workspace = true
ureq = { version = "2.10", default-features = true }
uuid.workspace = true
ctx-history-capture = { path = "../ctx-history-capture" }
ctx-history-core = { path = "../ctx-history-core" }
ctx-history-search = { path = "../ctx-history-search" }
ctx-history-store = { path = "../ctx-history-store" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
