[package]
name = "ctx-history-search"
version = "0.2.0"
description = "Internal search projection and ranking helpers for ctx"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
ctx-history-core = { path = "../ctx-history-core" }
ctx-history-store = { path = "../ctx-history-store" }

[dev-dependencies]
tempfile.workspace = true
